# network-scanner

./: .env.example  .gitignore  GITHUB_SYNC_SUMMARY.md  LICENSE  README.md  SETUP_OTHER_LAPTOP.md  pyproject.toml  requirements.txt
data/reports/: firewalla_crossref_20251201.md  iot_inventory_20251130.md  new_device_scan_20251130.md  scan_report_20251130_1641.md  thermostat_analysis_20251130.md
data/scans/: iot_comprehensive_20251130_164937.txt  wyze_detailed_20251130_164205.txt  wyze_ports_20251130_164145.txt
docs/: CORRELATION_REPORT_SUMMARY.md  DEVICE_CORRECTION.md  ETHICS.md  FIREWALLA_DISCOVERY.md  FIREWALLA_ZEEK_ACCESS.md  GEMINI.md  HTML_DASHBOARD_GUIDE.md  HTML_DASHBOARD_SUCCESS.md  IOT_SCAN_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SETUP_SUMMARY.md  QUICK_REFERENCE_CARD.md  QUICK_START_GUIDE.md  README.md  SCAN_COMPLETE_EXCELLENT_NEWS.md  SCAN_SUMMARY.md  THERMOSTAT_VERDICT.md  ZEEK_ANALYSIS_OPTIONS.md
scripts/: first_run.sh  generate_html_report.py  install_deps.sh  network_correlation_analyzer.py  setup_db.sh
